# syukatsu_support

./: .gitignore  PRIVACY_POLICY.md  README.md  e2e_simulate.py  main.py  pyproject.toml  pytest_errors.txt  pytest_out.txt  requirements.txt  system_prompts.json  test_gui_out.txt  test_repro.py  test_services_debug.txt  test_splash.py  test_stream.py  test_stream2.py
.pytest_cache/v/cache/: lastfailed  nodeids
data/: vector_stores.json
src/: app.py  models.py  rag_ui.py  state.py  styles.py  types.py  ui.py
src/application/: __init__.py
src/application/usecases/: __init__.py  llm_usecase.py  rag_usecase.py
src/config/: app_config.py  dependencies.py  logging_config.py
src/core/: base.py  errors.py  logger.py  models.py  pricing.py  prompts.py  rag_services.py  resilience.py  services.py
src/infrastructure/: openai_client.py  security.py
src/ui/: gui.py  main_model.py  main_presenter.py  main_view.py  rag_model.py  rag_presenter.py  rag_view.py  rag_window.py  styles.py
tests/: conftest.py  test_app_config.py  test_base.py  test_config.py  test_dependencies.py  test_gui.py  test_logging_config.py  test_main.py  test_models.py  test_mvp_presenters.py  test_openai_client.py  test_pricing.py  test_prompts.py  test_rag_services.py  test_rag_window.py  test_services.py  test_styles.py  test_types.py
